Qualify Slot to accept vcl-icon with prepend attribute

--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -1,4 +1,4 @@
-<ng-content select="[prepend]"></ng-content>
+<ng-content select="vcl-icon[prepend]"></ng-content>
 <input #input
        [placeholder]="placeholder || ''"
        [value]="inputValue"
