--- a/lib/ng-vcl/src/checkbox/checkbox.component.html
+++ b/lib/ng-vcl/src/checkbox/checkbox.component.html
@@ -1,15 +1,12 @@
-<label
+<label 
   class="checkbox-label"
-  [id]="elementId"
-  [tabindex]="tabindex"
+  [id]="elementId" 
+  [tabindex]="tabindex" 
   (click)="onLabelClick()"
   (keyup)="onKeyup($event)"
   (blur)="onBlur()"
   (focus)="onFocus()"
->
-  <div class="checkbox-input" [ngClass]="{ checked: checked }">
-    <!-- The Icon is now a checkmark! -->
-    <vcl-icon *ngIf="checked" icon="vcl:box-checked"></vcl-icon>
-  </div>
+  >
+  <vcl-icon [icon]="checked ? 'vcl:box-checked' : 'vcl:box'"></vcl-icon>
   <ng-content></ng-content>
 </label>
