fix: utilize the vcl-input-field on the vcl-select

--- a/demo/app/demos/select/demo.component.html
+++ b/demo/app/demos/select/demo.component.html
@@ -285,7 +285,7 @@
 <vcl-form-control-group>
   <vcl-label>Select country</vcl-label>
   <vcl-select>
-    <vcl-icon prepend icon="vcl:search"></vcl-icon>
+    <vcl-icon vclPrepend icon="vcl:search"></vcl-icon>
     <vcl-select-list [(value)]="value8">
       <vcl-select-list-header>Europe</vcl-select-list-header>
       <vcl-select-list-item value="Greece">
