fix: add vclAppend to the input-field's ng-content

--- a/demo/app/demos/input/demo.component.html
+++ b/demo/app/demos/input/demo.component.html
@@ -15,9 +15,9 @@
 <vcl-form-control-group>
   <vcl-label>Email</vcl-label>
   <vcl-input-field>
-    <vcl-icon icon="mdi:email"></vcl-icon>
+    <vcl-icon vclPrepend icon="mdi:email"></vcl-icon>
     <input vclInput [(ngModel)]="data1" />
-    <button vcl-button square>
+    <button vclAppend vcl-button square>
       <vcl-icon icon="mdi:close"></vcl-icon>
     </button>
   </vcl-input-field>
