--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -17,6 +17,7 @@
   />
   <button
     *ngIf="clearable && inputValue"
+    vclAppend
     vcl-button
     square
     type="button"
@@ -27,7 +28,7 @@
   >
     <vcl-icon icon="vcl:close"></vcl-icon>
   </button>
-  <button vcl-button square type="button" tabindex="-1" class="appended">
+  <button vclAppend vcl-button square type="button" tabindex="-1" class="appended">
     <vcl-icon icon="vcl:arrow-down"></vcl-icon>
   </button>
 </vcl-input-field>
