--- a/lib/ng-vcl/src/date-picker/date-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/date-picker.component.html
@@ -18,12 +18,12 @@
       <vcl-icon [icon]="pick === 'time' ? 'vcl:clock' : 'vcl:calendar'"></vcl-icon>
 </button>
 
+<!-- VCL OFF Click -->
 <ng-template>
   <vcl-calendar [selectionMode]="pick"
                 [showWeekOfTheYear]="showWeekOfTheYear"
                 [dateModifiers]="dateModifier"
                 [viewDate]="viewDate"
                 [value]="value"
-                (valueChange)="onSelect($event)"
-                (vclOffClick)="close()"></vcl-calendar>
+                (valueChange)="onSelect($event)"></vcl-calendar>
 </ng-template>
