fix: add bindings value to checkbox demo page

--- a/lib/ng-vcl/src/date-picker/date-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/date-picker.component.html
@@ -25,5 +25,6 @@
                 [dateModifiers]="dateModifier"
                 [viewDate]="viewDate"
                 [value]="value"
-                (valueChange)="onSelect($event)"></vcl-calendar>
+                (valueChange)="onSelect($event)"
+                (vclOffClick)="onOffClick($event)"></vcl-calendar>
 </ng-template>
