fix(vcl-date-picker): fix off click triggering when changing years

--- a/lib/ng-vcl/src/date-picker/date-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/date-picker.component.html
@@ -20,11 +20,12 @@
 
 <!-- VCL OFF Click -->
 <ng-template>
-  <vcl-calendar [selectionMode]="pick"
+  <vcl-calendar #calendarEl
+                [selectionMode]="pick"
                 [showWeekOfTheYear]="showWeekOfTheYear"
                 [dateModifiers]="dateModifier"
                 [viewDate]="viewDate"
                 [value]="value"
                 (valueChange)="onSelect($event)"
-                (vclOffClick)="onOffClick($event)"></vcl-calendar>
+                (vclOffClick)="checkClose($event)"></vcl-calendar>
 </ng-template>
