chore: support for demo scss code

--- a/demo/app/modules/demo/demo.component.html
+++ b/demo/app/modules/demo/demo.component.html
@@ -1,21 +1,24 @@
-<h2 class="article-header"> {{title}}</h2>
-<div *ngIf="tabs.length>0">
-  <vcl-tab-nav borders=true>
+<h2 class="article-header">{{ title }}</h2>
+<div *ngIf="tabs.length > 0">
+  <vcl-tab-nav borders="true">
     <vcl-tab *ngFor="let tab of tabs">
-      <vcl-label>{{tab.name}}</vcl-label>
-      <div *ngIf="tab.type==='component'">
+      <vcl-label>{{ tab.name }}</vcl-label>
+      <div *ngIf="tab.type === 'component'">
         <ng-template [cdkPortalOutlet]="tab.content"></ng-template>
       </div>
-      <!-- <div *ngIf="tab.type==='html'" [innerHtml]="tab.content"></div> -->
-      <!-- <div ngIf="tab.type==='md'" [innerHTML]="typescriptMarkdown | language : 'typescript' | markdown"></div> -->
-      <!-- <div ngIf="tab.type==='md'" [innerHTML]="tab.content | markdown"></div> -->
-      <div *ngIf="tab.type==='text'"><pre>{{tab.content}}</pre></div>
-      <markdown *ngIf="tab.type==='md'" [data]="tab.content"></markdown>
-      <markdown *ngIf="tab.type==='ts'" [data]="tab.content | language : 'typescript'"></markdown>
-      <markdown *ngIf="tab.type==='html'" [data]="tab.content | language : 'html'"></markdown>
-
-      <!-- <div ngIf="tab.type==='md'" [innerHTML]="tab.content | language : 'typescript' | markdown"></div> -->
-      <!-- <pre *ngIf="tab.type==='pre'"  [innerHtml]="tab.content"></pre> -->
+      <div *ngIf="tab.type === 'text'">
+        <pre>{{ tab.content }}</pre>
+      </div>
+      <markdown *ngIf="tab.type === 'md'" [data]="tab.content"></markdown>
+      <markdown
+        *ngIf="tab.type === 'ts'"
+        [data]="tab.content | language: 'typescript'"></markdown>
+      <markdown
+        *ngIf="tab.type === 'html'"
+        [data]="tab.content | language: 'html'"></markdown>
+      <markdown
+        *ngIf="tab.type === 'scss'"
+        [data]="tab.content | language: 'scss'"></markdown>
     </vcl-tab>
   </vcl-tab-nav>
 </div>
