chore: ng optimized image src -> ngSrc

--- a/demo/app/demos/icon/demo.component.html
+++ b/demo/app/demos/icon/demo.component.html
@@ -9,7 +9,7 @@ Icon provider based (from the <i>Font Awesome</i> icon font):
 
 PNG image resource based:
 <vcl-icon alt="cog">
-  <img src="http://materialdesignicons.com/api/download/icon/png/E4A14909-3821-4DB1-A739-4DA464ABEEB7/36">
+  <img ngSrc="http://materialdesignicons.com/api/download/icon/png/E4A14909-3821-4DB1-A739-4DA464ABEEB7/36">
 </vcl-icon>
 
 <br><br>
