--- a/demo/app/demos/data-list/demo.component.html
+++ b/demo/app/demos/data-list/demo.component.html
@@ -1,7 +1,7 @@
 <ng-template #country let-name="name" let-desc="desc">
   <div class="row">
     <div>
-      <img class="responsive-image" src="https://picsum.photos/90/90">
+      <img class="responsive-image" ngSrc="https://picsum.photos/90/90">
     </div>
     <div class="gutter-margin flex">
       <div class="row">
@@ -49,10 +49,10 @@
         Button
       </vcl-icogram>
     </button>
-  </vcl-data-list-footer>  
+  </vcl-data-list-footer>
 </vcl-data-list>
 
- 
+
 Value: {{value1}}
 
 <h3>mode="multiple"</h3>
