--- a/demo/app/demos/zoom-box/demo.component.html
+++ b/demo/app/demos/zoom-box/demo.component.html
@@ -2,7 +2,7 @@
 <div class="grid-row">
   <div class="grid-span-4">
     <vcl-zoom-box-container #first [x]="30" [y]="60" [width]="120" [height]="190">
-      <img src="https://picsum.photos/320/320?image=434">
+      <img ngSrc="https://picsum.photos/320/320?image=434">
       <vcl-zoom-box-magnifier></vcl-zoom-box-magnifier>
     </vcl-zoom-box-container>
   </div>
@@ -16,7 +16,7 @@
 <div class="grid-row">
   <div class="grid-span-4">
     <vcl-zoom-box-container #second [x]="30" [y]="60" [width]="190" [height]="120" [resetOnOut]="true">
-      <img src="https://picsum.photos/320/320?image=434">
+      <img ngSrc="https://picsum.photos/320/320?image=434">
       <vcl-zoom-box-magnifier></vcl-zoom-box-magnifier>
     </vcl-zoom-box-container>
   </div>
@@ -30,7 +30,7 @@
 <div class="grid-row">
   <div class="grid-span-4">
     <vcl-zoom-box-container #third [x]="30" [y]="60" [width]="190" [height]="120" [hiding]="true">
-      <img src="https://picsum.photos/320/320?image=434">
+      <img ngSrc="https://picsum.photos/320/320?image=434">
       <vcl-zoom-box-magnifier></vcl-zoom-box-magnifier>
     </vcl-zoom-box-container>
   </div>
@@ -44,7 +44,7 @@
 <div class="grid-row">
   <div class="grid-span-4">
     <vcl-zoom-box-container #fourth [x]="30" [y]="60" [width]="190" [height]="120" [hidden]="true" [hiding]="true">
-      <img src="https://picsum.photos/320/320?image=434">
+      <img ngSrc="https://picsum.photos/320/320?image=434">
       <vcl-zoom-box-magnifier></vcl-zoom-box-magnifier>
     </vcl-zoom-box-container>
   </div>
@@ -58,7 +58,7 @@
 <div class="grid-row">
   <div class="grid-span-4">
     <vcl-zoom-box-container #fifth [x]="30" [y]="60" [width]="190" [height]="120" [invisible]="true">
-      <img src="https://picsum.photos/320/320?image=434">
+      <img ngSrc="https://picsum.photos/320/320?image=434">
       <vcl-zoom-box-magnifier></vcl-zoom-box-magnifier>
     </vcl-zoom-box-container>
   </div>
