chore: wip angular 15 update

--- a/lib/ng-vcl/src/busy-indicator/busy-indicator.component.html
+++ b/lib/ng-vcl/src/busy-indicator/busy-indicator.component.html
@@ -1,6 +1,6 @@
 <div class="justify-center icogram" [class.col]="layout == 'vertical'" [class.row]="layout == 'horizontal'" role="status">
   <vcl-icon *ngIf="!icon" class="self-center" [attr.aria-label]="label">
-    <img [ngSrc]="imageSrc" role=”presentation” [style.width]="imageWidth" [style.height]="imageHeight">
+    <img [src]="imageSrc" role=”presentation” [style.width]="imageWidth" [style.height]="imageHeight">
   </vcl-icon>
   <vcl-icon *ngIf="icon" class="self-center" [attr.aria-label]="label" [icon]="icon"></vcl-icon>
 
