fix(vcl-select) add disabled props to the dropdown

--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -28,7 +28,7 @@
   >
     <vcl-icon icon="vcl:close"></vcl-icon>
   </button>
-  <button vclAppend vcl-button square type="button" tabindex="-1" class="appended">
+  <button vclAppend vcl-button square type="button" tabindex="-1" class="appended" [disabled]="isDisabled">
     <vcl-icon icon="vcl:arrow-down"></vcl-icon>
   </button>
 </vcl-input-field>
