fix(vcl-select) add disabled class to inner input-field

--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -1,4 +1,4 @@
-<vcl-input-field>
+<vcl-input-field [class.disabled]="isDisabled">
   <ng-content vclPrepend select="[vclPrepend]"></ng-content>
   <input
     #input
