chore: add demo for zoom animation

--- a/demo/app/demos/layer/demo.component.html
+++ b/demo/app/demos/layer/demo.component.html
@@ -4,6 +4,8 @@
 <br><br>
 <button vcl-button (click)="openBarComponent()">Open bar component as layer</button>
 <br><br>
+<button vcl-button (click)="openBarWithZoomAnimationComponent()">Open bar component as layer with Zoom animation</button>
+<br><br>
 <button vcl-button (click)="openNagLayer()">Open nag layer</button>
 
 <ng-template vclLayer #inlineLayer="vclLayer" let-title="title">
