chore: add dynamic data-list
- Show how to add and remove items to and from datalist.

--- a/demo/app/demos/data-list/demo.component.html
+++ b/demo/app/demos/data-list/demo.component.html
@@ -124,3 +124,5 @@ Value: {{value2}}
   <vcl-busy-indicator class="p-3 w-100p"></vcl-busy-indicator>
 </vcl-data-list>
 
+<data-list-add-remove-demo></data-list-add-remove-demo>
+
