--- a/demo/app/demos/data-list/demo.component.html
+++ b/demo/app/demos/data-list/demo.component.html
@@ -1,113 +1,45 @@
 <ng-template #country let-name="name" let-desc="desc">
   <div class="row">
     <div>
-      <img class="responsive-image" ngSrc="https://picsum.photos/90/90">
+      <img class="responsive-image" ngSrc="https://picsum.photos/90/90" />
     </div>
     <div class="gutter-margin flex">
       <div class="row">
         <div class="row center flex">
-          <h2 class="m-0">{{name}}</h2>&nbsp;&nbsp;
+          <h2 class="m-0">{{ name }}</h2>
+          &nbsp;&nbsp;
           <span class="badge">Country</span>
         </div>
       </div>
-      <div *ngIf="desc">{{desc}}</div>
+      <div *ngIf="desc">{{ desc }}</div>
     </div>
   </div>
 </ng-template>
 
-<h3>Basic vcl-data-list</h3>
-
-<vcl-data-list [(value)]="value1">
-  <vcl-data-list-header>
-    <h2>Countries</h2>
-  </vcl-data-list-header>
-  <vcl-data-list-item value="gr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Greece', desc: 'A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="fr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'France' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="de" [disabled]="true">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Germany (disabled)' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="gb">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'The United Kingdom of Great Britain and Northern Ireland' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="jp">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Japan' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="ch">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'China' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="th">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Thailand' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-footer class="row justify-end my-2">
-    <button vcl-button>
+<div>
+  <!-- mode: single, mode: multiple, mode: none -->
+  <h3>Select a mode</h3>
+  <vcl-radio-group [(ngModel)]="modeValue">
+    <vcl-radio-button value="single">
       <vcl-icogram>
-        <vcl-icon vclPrepend icon="fas:plus"></vcl-icon>
-        Button
+        <code>single</code>
       </vcl-icogram>
-    </button>
-  </vcl-data-list-footer>
-</vcl-data-list>
+    </vcl-radio-button>
+    <vcl-radio-button value="multiple">
+      <vcl-icogram>
+        <code>multiple</code>
+      </vcl-icogram>
+    </vcl-radio-button>
+    <vcl-radio-button value="none">
+      <vcl-icogram>
+        <code>none</code>
+      </vcl-icogram>
+    </vcl-radio-button>
+  </vcl-radio-group>
+  <p><code>mode</code>: {{ modeValue }}</p>
+</div>
 
-
-Value: {{value1}}
-
-<h3>mode="multiple"</h3>
-
-<vcl-data-list [(value)]="value2" mode="multiple">
-  <vcl-data-list-item value="gr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Greece', desc: 'A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="fr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'France' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="de" [disabled]="true">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Germany (disabled)' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="gb">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'The United Kingdom of Great Britain and Northern Ireland' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="jp">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Japan' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="ch">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'China' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="th">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Thailand' }"></ng-container>
-  </vcl-data-list-item>
-</vcl-data-list>
-
-Value: {{value2}}
-
-<h3>mode="none"</h3>
-
-<vcl-data-list mode="none">
-  <vcl-data-list-item value="gr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Greece', desc: 'A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="fr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'France' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="de" [disabled]="true">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Germany (disabled)' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="gb">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'The United Kingdom of Great Britain and Northern Ireland' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="jp">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Japan' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="ch">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'China' }"></ng-container>
-  </vcl-data-list-item>
-  <vcl-data-list-item value="th">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Thailand' }"></ng-container>
-  </vcl-data-list-item>
-</vcl-data-list>
+<data-list-add-remove-demo [mode]="modeValue"></data-list-add-remove-demo>
 
 <h3>Mixed in custom content</h3>
 
@@ -116,13 +48,18 @@ Value: {{value2}}
     <h2>Countries</h2>
   </vcl-data-list-header>
   <vcl-data-list-item value="gr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'Greece', desc: 'A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas' }"></ng-container>
+    <ng-container
+      *ngTemplateOutlet="
+        country;
+        context: {
+          name: 'Greece',
+          desc: 'A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas'
+        }
+      "></ng-container>
   </vcl-data-list-item>
   <vcl-data-list-item value="fr">
-    <ng-container *ngTemplateOutlet="country; context: {name: 'France' }"></ng-container>
+    <ng-container
+      *ngTemplateOutlet="country; context: { name: 'France' }"></ng-container>
   </vcl-data-list-item>
   <vcl-busy-indicator class="p-3 w-100p"></vcl-busy-indicator>
 </vcl-data-list>
-
-<data-list-add-remove-demo></data-list-add-remove-demo>
-
