chore: rest data-list-item selection when mode is changed

--- a/demo/app/demos/data-list/list-add-remove/data-list-add-remove-demo.component.html
+++ b/demo/app/demos/data-list/list-add-remove/data-list-add-remove-demo.component.html
@@ -43,6 +43,7 @@
   </ng-container>
 </vcl-data-list>
 
+<p>Selected value: {{ selectedValues | json  }}</p>
 <!-- <div class="data-list-item row" role="option" aria-selected="false">
   <div>
     <img class="responsive-image" src="https://picsum.photos/180/180">
