chore: refactor button and select component

--- a/demo/app/demos/icogram/demo.component.html
+++ b/demo/app/demos/icogram/demo.component.html
@@ -1,6 +1,6 @@
 <vcl-icogram >
   <vcl-icon vclPrepend icon="fas:chevron-right"></vcl-icon>
-  icogram with accessible link xxx
+  icogram with accessible link
 </vcl-icogram>
 <br><br>
 
