--- a/demo/app/demos/button-group/demo.component.html
+++ b/demo/app/demos/button-group/demo.component.html
@@ -17,13 +17,13 @@
 <h3>Horizontal button group (multiple selection)</h3>
 <vcl-button-group selectionMode="multiple" [(value)]="value3">
   <button vcl-button square [value]="'italic'">
-    <vcl-icon icon="fas:italic"></vcl-icon>
+    <vcl-icon icon="vcl:italic"></vcl-icon>
   </button>
   <button vcl-button square [value]="'bold'">
-    <vcl-icon icon="fas:bold"></vcl-icon>
+    <vcl-icon icon="vcl:bold"></vcl-icon>
   </button>
   <button vcl-button square [value]="'underline'">
-    <vcl-icon icon="fas:underline"></vcl-icon>
+    <vcl-icon icon="vcl:underline"></vcl-icon>
   </button>
 </vcl-button-group>
 <p>Selected values: {{ value3 }}</p>
@@ -31,12 +31,12 @@
 <h3>Disabled button group</h3>
 <vcl-button-group [disabled]="true" selectionMode="multiple">
   <button vcl-button square [value]="'italic'">
-    <vcl-icon icon="fas:italic"></vcl-icon>
+    <vcl-icon icon="vcl:italic"></vcl-icon>
   </button>
   <button vcl-button square [value]="'bold'">
-    <vcl-icon icon="fas:bold"></vcl-icon>
+    <vcl-icon icon="vcl:bold"></vcl-icon>
   </button>
   <button vcl-button square [value]="'underline'">
-    <vcl-icon icon="fas:underline"></vcl-icon>
+    <vcl-icon icon="vcl:underline"></vcl-icon>
   </button>
 </vcl-button-group>
