feat(navigation): replace icons in the navigation page

--- a/demo/app/demos/form-control-group/demo.component.html
+++ b/demo/app/demos/form-control-group/demo.component.html
@@ -80,7 +80,7 @@
     <vcl-form-control-group class="flex">
       <vcl-label>Email</vcl-label>
       <vcl-input-field>
-        <vcl-icon icon="fas:envelop"></vcl-icon>
+        <vcl-icon icon="vcl:email"></vcl-icon>
         <input vclInput formControlName="email" />
       </vcl-input-field>
       <vcl-hint-error error="required">Email is required</vcl-hint-error>
