--- a/demo/app/demos/navigation/demo.component.html
+++ b/demo/app/demos/navigation/demo.component.html
@@ -4,7 +4,7 @@
   <vcl-navigation-item>
     <vcl-navigation-label>
       <vcl-icogram>
-        <vcl-icon vclPrepend icon="fas:home"></vcl-icon>
+        <vcl-icon vclPrepend icon="vcl:home"></vcl-icon>
         Home
       </vcl-icogram>
     </vcl-navigation-label>
@@ -12,7 +12,11 @@
   <vcl-navigation-item #products="vclNavigationItem">
     <vcl-navigation-label>
       <vcl-icogram>
-        <vcl-icon vclPrepend [icon]="products.opened ? 'fas:chevron-down' : 'fas:chevron-right'"></vcl-icon>
+        <vcl-icon
+          vclPrepend
+          [icon]="
+            products.opened ? 'vcl:chevron-down' : 'vcl:chevron-right'
+          "></vcl-icon>
         Products
       </vcl-icogram>
     </vcl-navigation-label>
@@ -20,7 +24,7 @@
       <vcl-navigation-item>
         <vcl-navigation-label>
           <vcl-icogram>
-            <vcl-icon vclPrepend icon="fas:bicycle"></vcl-icon>
+            <vcl-icon vclPrepend icon="vcl:bicycle"></vcl-icon>
             Product 1
           </vcl-icogram>
         </vcl-navigation-label>
@@ -28,7 +32,7 @@
       <vcl-navigation-item>
         <vcl-navigation-label>
           <vcl-icogram>
-            <vcl-icon vclPrepend icon="fas:bicycle"></vcl-icon>
+            <vcl-icon vclPrepend icon="vcl:bicycle"></vcl-icon>
             Product 2
           </vcl-icogram>
         </vcl-navigation-label>
@@ -38,7 +42,11 @@
   <vcl-navigation-item #contact="vclNavigationItem">
     <vcl-navigation-label>
       <vcl-icogram>
-        <vcl-icon vclPrepend [icon]="contact.opened ? 'fas:chevron-down' : 'fas:chevron-right'"></vcl-icon>
+        <vcl-icon
+          vclPrepend
+          [icon]="
+            contact.opened ? 'vcl:chevron-down' : 'vcl:chevron-right'
+          "></vcl-icon>
         Contact
       </vcl-icogram>
     </vcl-navigation-label>
@@ -46,7 +54,7 @@
       <vcl-navigation-item>
         <vcl-navigation-label>
           <vcl-icogram>
-            <vcl-icon vclPrepend icon="fas:envelope"></vcl-icon>
+            <vcl-icon vclPrepend icon="vcl:email"></vcl-icon>
             Contact 1
           </vcl-icogram>
         </vcl-navigation-label>
@@ -54,12 +62,12 @@
       <vcl-navigation-item>
         <vcl-navigation-label>
           <vcl-icogram>
-            <vcl-icon vclPrepend icon="fas:envelope"></vcl-icon>
+            <vcl-icon vclPrepend icon="vcl:email"></vcl-icon>
             Contact 2
           </vcl-icogram>
         </vcl-navigation-label>
       </vcl-navigation-item>
-    </vcl-navigation>    
+    </vcl-navigation>
   </vcl-navigation-item>
 </vcl-navigation>
 
@@ -69,7 +77,7 @@
   <vcl-navigation-item>
     <vcl-navigation-label>
       <vcl-icogram>
-        <vcl-icon vclPrepend icon="fas:home"></vcl-icon>
+        <vcl-icon vclPrepend icon="vcl:home"></vcl-icon>
         Home
       </vcl-icogram>
     </vcl-navigation-label>
@@ -77,7 +85,7 @@
   <vcl-navigation-item>
     <vcl-navigation-label>
       <vcl-icogram>
-        <vcl-icon vclPrepend icon="fas:bicycle"></vcl-icon>
+        <vcl-icon vclPrepend icon="vcl:bicycle"></vcl-icon>
         Products
       </vcl-icogram>
     </vcl-navigation-label>
@@ -85,10 +93,9 @@
   <vcl-navigation-item>
     <vcl-navigation-label>
       <vcl-icogram>
-        <vcl-icon vclPrepend icon="fas:envelope"></vcl-icon>
+        <vcl-icon vclPrepend icon="vcl:email"></vcl-icon>
         Contacts
       </vcl-icogram>
     </vcl-navigation-label>
   </vcl-navigation-item>
 </vcl-navigation>
-  
