--- a/demo/app/demos/icogram/demo.component.html
+++ b/demo/app/demos/icogram/demo.component.html
@@ -1,18 +1,18 @@
 <vcl-icogram >
-  <vcl-icon vclPrepend icon="fas:chevron-right"></vcl-icon>
+  <vcl-icon vclPrepend icon="vcl:chevron-right"></vcl-icon>
   icogram with accessible link
 </vcl-icogram>
 <br><br>
 
 <vcl-icogram>
-  <vcl-icon vclPrepend icon="fas:chevron-right"></vcl-icon>
+  <vcl-icon vclPrepend icon="vcl:chevron-right"></vcl-icon>
   <div class="text">prep/app icons</div>
-  <vcl-icon vclAppend icon="fas:chevron-right"></vcl-icon>
+  <vcl-icon vclAppend icon="vcl:chevron-right"></vcl-icon>
 </vcl-icogram>
 <br><br>
 
 <a vcl-icogram href="'https://github.com/ng-vcl/ng-vcl'" target="'_blank'">
-  <vcl-icon vclPrepend icon="fas:link"></vcl-icon>
+  <vcl-icon vclPrepend icon="vcl:link"></vcl-icon>
   <div class="text">external link with appended icon</div>
 </a>
 <br><br>
@@ -20,7 +20,7 @@
 <a vcl-a-icogram
   [href]="'this is not considered when the link is disabled'"
   [disabled]="true">
-  <vcl-icon vclPrepend icon="fas:link"></vcl-icon>
+  <vcl-icon vclPrepend icon="vcl:link"></vcl-icon>
   <div class="text">Disabled link</div>
 </a>
 <br><br>
