feat(icon): replace several icons

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -76,8 +76,9 @@
               <vcl-icogram>
                 <vcl-icon
                   vclPrepend
+                  class="scale155p m-0"
                   [icon]="
-                    navGroupItem.opened ? 'fas:angle-down' : 'fas:angle-right'
+                    navGroupItem.opened ? 'vcl:chevron-down' : 'vcl:chevron-right'
                   "
                 ></vcl-icon>
                 &nbsp;{{ item.label }}
