--- a/demo/app/demos/panel/demo.component.html
+++ b/demo/app/demos/panel/demo.component.html
@@ -11,7 +11,7 @@
 <vcl-panel-dialog [showCloseButton]="true">
   <vcl-panel-title>Panel Title</vcl-panel-title>
   <div class="row gutterx-3 align-items-center">
-    <vcl-icon icon="fas:exclamation-circle" class="scale300p"></vcl-icon>
+    <vcl-icon icon="vcl:alert-circle" class="scale300p"></vcl-icon>
     <div>Panel Content</div>
   </div>
   <button type="button" vcl-button vclPanelFooterButton class="transparent outline">
@@ -25,7 +25,7 @@
 <vcl-panel type="warning">
   <vcl-panel-title>Panel Title</vcl-panel-title>
   <div class="row gutterx-3 align-items-center">
-    <vcl-icon icon="fas:exclamation-circle" class="scale300p"></vcl-icon>
+    <vcl-icon icon="vcl:alert-circle" class="scale300p"></vcl-icon>
     <div>Panel with semantic coloring</div>
   </div>
 </vcl-panel>
