--- a/demo/app/demos/select-list/demo.component.html
+++ b/demo/app/demos/select-list/demo.component.html
@@ -3,7 +3,7 @@
 <vcl-select-list [(value)]="value1">
   <vcl-select-list-header>Europe</vcl-select-list-header>
   <vcl-select-list-item value="gr">
-    <vcl-icon vclPrepend icon="fas:flag"></vcl-icon>
+    <vcl-icon vclPrepend icon="vcl:flag"></vcl-icon>
     Greece
     <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
   </vcl-select-list-item>
