--- a/lib/ng-vcl/src/alert/alert.component.html
+++ b/lib/ng-vcl/src/alert/alert.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="alert.title" class="panel-header no-bg row justify-between align-items-center">
     <h3 class="panel-title">{{alert.title}}</h3>
     <button *ngIf="alert.showCloseButton" vcl-button square class="transparent" (click)="close()">
-      <vcl-icon icon="fas:times"></vcl-icon>
+      <vcl-icon icon="vcl:close"></vcl-icon>
     </button>
   </div>
 
