--- a/demo/app/demos/radio-button/demo.component.html
+++ b/demo/app/demos/radio-button/demo.component.html
@@ -3,19 +3,19 @@
   <vcl-radio-button value="m">
     <vcl-icogram>
       Male
-      <vcl-icon icon="fas:mars"></vcl-icon>
+      <vcl-icon icon="vcl:male"></vcl-icon>
     </vcl-icogram>
   </vcl-radio-button>
   <vcl-radio-button value="f">
     <vcl-icogram>
       Female
-      <vcl-icon icon="fas:venus"></vcl-icon>
+      <vcl-icon icon="vcl:female"></vcl-icon>
     </vcl-icogram>
   </vcl-radio-button>
   <vcl-radio-button value="g">
     <vcl-icogram>
       Genderless
-      <vcl-icon icon="fas:genderless"></vcl-icon>
+      <vcl-icon icon="vcl:genderless"></vcl-icon>
     </vcl-icogram>
   </vcl-radio-button>
 </vcl-radio-group>
@@ -26,19 +26,19 @@
   <vcl-radio-button value="m">
     <vcl-icogram>
       Male
-      <vcl-icon icon="fas:mars"></vcl-icon>
+      <vcl-icon icon="vcl:male"></vcl-icon>
     </vcl-icogram>
   </vcl-radio-button>
   <vcl-radio-button value="f">
     <vcl-icogram>
       Female
-      <vcl-icon icon="fas:venus"></vcl-icon>
+      <vcl-icon icon="vcl:female"></vcl-icon>
     </vcl-icogram>
   </vcl-radio-button>
   <vcl-radio-button value="g">
     <vcl-icogram>
       Genderless
-      <vcl-icon icon="fas:genderless"></vcl-icon>
+      <vcl-icon icon="vcl:genderless"></vcl-icon>
     </vcl-icogram>
   </vcl-radio-button>
 </vcl-radio-group>
