feat(gallery): implement hideAndShowButtonsOnHover from vcl

--- a/lib/ng-vcl/src/gallery/gallery.component.html
+++ b/lib/ng-vcl/src/gallery/gallery.component.html
@@ -1,3 +1,8 @@
-<div #galleryContainer class="gallery" touch-action="pan-y" [ngStyle]="!row && {'flex-direction': 'column'}">
+<div
+  #galleryContainer
+  class="gallery"
+  [ngClass]="{ 'navigation-buttons-on-hover': hideAndShowButtonsOnHover }"
+  touch-action="pan-y"
+  [ngStyle]="!row && { 'flex-direction': 'column' }">
   <ng-content></ng-content>
 </div>
