--- a/lib/ng-vcl/src/gallery/gallery-thumbnails.component.html
+++ b/lib/ng-vcl/src/gallery/gallery-thumbnails.component.html
@@ -1,7 +1,18 @@
 <div #galleryThumbs class="gallery-thumbs" touch-action="pan-y">
   <div class="gallery-thumbs-container">
-    <div class="gallery-thumb-wrapper" *ngFor="let image of target.images; let i = index" [ngClass]="{'selected': i == target.selectedImage}" (click)="target.selectImage(i)">
-      <img class="gallery-thumb" [ngSrc]="image.thumbnail || image.image" [alt]="image.alt" width="100" height="100">
-    </div>
+    @for (image of target.images; track $index) {
+      <div
+        class="gallery-thumb-wrapper"
+        [ngClass]="{ selected: i == target.selectedImage }"
+        (click)="target.selectImage(i)">
+        <img
+          class="gallery-thumb"
+          [ngSrc]="image.thumbnail || image.image"
+          priority
+          [alt]="image.alt"
+          width="100"
+          height="100" />
+      </div>
+    }
   </div>
 </div>
