--- a/demo/app/demos/password-input/demo.component.html
+++ b/demo/app/demos/password-input/demo.component.html
@@ -2,16 +2,16 @@
 <vcl-form-control-group>
   <vcl-label>Password</vcl-label>
   <vcl-password-input>
-    <input vclInput [(value)]="password" placeholder="Enter password">
+    <input vclInput [(ngModel)]="password" placeholder="Enter password" />
   </vcl-password-input>
 </vcl-form-control-group>
-<br>
-<b>Password input value:</b> {{password}}
+<br />
+<b>Password input value:</b> {{ password }}
 
 <h3>Password input (disabled)</h3>
 <vcl-form-control-group>
   <vcl-label>Password</vcl-label>
   <vcl-password-input>
-    <input vclInput [disabled]="true" placeholder="Enter password">
-  </vcl-password-input> 
+    <input vclInput [disabled]="true" placeholder="Enter password" />
+  </vcl-password-input>
 </vcl-form-control-group>
